--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.text{
+	color: blue;
+	background-color: yellow;
+	margin: 50px;
+	widows: 300px;
+	font-size: 16px;
+	border: 1px dotted black;
+}
+#text{
+	
+}
